feat: inspect concept mesh assemblies
